add base file structure

--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@ Pierwsze repozytorium w github
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="main.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet">
     </head>
     <body>
+        <pre id="cytat">
+           "Boże, daj mi pogodę ducha, abym godził 
+            się z tym, czego zmienić nie mogę,
+            odwagę, abym zmieniał to, co zmienić
+            mogę, i mądrość, abym zawsze potrafił
+            odróżnić jedno od drugiego."
+        </pre>
+        <p id="caption">
+            <cite>
+               -Marek Aureliusz
+            </cite>
+        </p>
         
     </body>
 </html>
